sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Plan__c/Employee_Benefits_Plan__c.object-meta.xml
<CustomObject>
    <description>Employee Benefits Plan</description>
    <label>Employee Benefits Plan</label>
    <nameField>
        <displayFormat>EBP-{0000000}</displayFormat>
        <label>Employee Benefits Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Benefits Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>