sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Plan__c/fields/Benefit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Plan__c</fullName>
    <description>Benefit Plan</description>
    <inlineHelpText>Benefit Plan</inlineHelpText>
    <label>Benefit Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GPA/WIBA</fullName>
            </value>
            <value>
                <fullName>Group Life</fullName>
            </value>
            <value>
                <fullName>Pension Plan</fullName>
            </value>
            <value>
                <fullName>Resolution Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>