sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Plan__c/fields/Company_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Company_Contribution__c</fullName>
    <description>Company Contribution</description>
    <inlineHelpText>Company Contribution</inlineHelpText>
    <label>Company Contribution</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>