sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Plan__c/fields/Eligibility_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Date__c</fullName>
    <description>Eligibility Date</description>
    <inlineHelpText>Eligibility Date</inlineHelpText>
    <label>Eligibility Date</label>
    <type>Date</type>
</CustomField>