sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Plan__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Benefits Plans (Employee)</relationshipLabel>
    <relationshipName>Employee_Benefits_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>