sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Plan__c/fields/Employee_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Employee_Contribution__c</fullName>
    <description>Employee Contribution</description>
    <inlineHelpText>Employee Contribution</inlineHelpText>
    <label>Employee Contribution</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>