sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Plan__c/fields/Plan_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Plan_Coverage__c</fullName>
    <description>Plan Coverage</description>
    <inlineHelpText>Plan Coverage</inlineHelpText>
    <label>Plan Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employee + Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>