sfSandBoxCode/force-app/main/default/objects/Employee_Benefits_Plan__c/fields/Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status__c</fullName>
    <description>Benefit Plan Status</description>
    <inlineHelpText>Benefit Plan Status</inlineHelpText>
    <label>Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>